2004-07-01  Andy Wingo  <wingo@pobox.com>

	* gnome/glade.scm: New file.

	* gnome/gw/glade-support.[ch]: Evaluate expressions in the (gnome
	gw libglade) module, scm_module_gobject isn't exported any more.

	* ChangeLog: Merged all ChangeLogs into this one, and elided
	entries that didn't deal with glade.

	* gtk-checks.ac: New file.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glade-support.c (handle_read_error): New function.
	(connect_many): Use scm_internal_catch with handle_read_error
	around scm_c_read_string.

2004-01-14  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glade-support.c (handle_read_error): New function.
	(connect_many): Use scm_internal_catch with handle_read_error
	around scm_c_read_string.

2003-11-25  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gw-glade-spec.scm: Use gw-standard instead of
	guile-gnome-gw-standard.

2003-11-25  Andreas Rottmann  <a.rottmann@gmx.at>

	* gnome/gw/gw-glade-spec.scm: Use gw-standard instead of
	guile-gnome-gw-standard.

2003-10-29  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glade-support.c (guile_glade_custom_handler): Don't expect a
	procedure from the widget handler, only a widget. So if you want
	to call a procedure, put it in parentheses.

2003-10-29  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/glade-support.c (guile_glade_custom_handler): Don't expect a
	procedure from the widget handler, only a widget. So if you want
	to call a procedure, put it in parentheses.

2003-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gw-glade-spec.scm: Set the custom handler on library init.

	* gnome/gw/glade-support.c (connect_many): Use scm_c_eval_str instead of
	scm_c_lookup; this allows lambda expressions, etc.
	(guile_glade_custom_handler): New function, handles glade's custom
	widget facility.

2003-10-26  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/gw-glade-spec.scm: Set the custom handler on library init.

	* gnome/gw/glade-support.c (connect_many): Use scm_c_eval_str instead of